fixed height causes flicker

--- a/res/css/jd.gallery.css
+++ b/res/css/jd.gallery.css
@@ -148,7 +148,7 @@
 {
 	position: absolute;
 	width: 100%;
-	height: 78px;
+	/*height: 78px;*/
 	top: 10px;
 	left: 0;
 	overflow: hidden;
